# luckfox_test

./: README.md
gpio/: Cargo.toml  README.md
gpio/diagram/: gpio.kicad_sch
gpio/diagram/gpio/: gpio.kicad_prl  gpio.kicad_pro  gpio.kicad_sch
gpio/src/: main.rs  main1.rs
i2c/: Cargo.toml
i2c/diagram/: i2c.kicad_pro  i2c.kicad_sch
i2c/diagram/i2c/: i2c.kicad_prl  i2c.kicad_sch
i2c/src/: main.rs
slint/: Cargo.toml  README.md  build.rs  main.slint
slint/src/: main.rs
